--- a/style.css
+++ b/style.css
@@ -477,7 +477,6 @@ hr {
 ul,
 ol {
 	margin: 0 0 1.75em 1.25em;
-	padding: 0;
 }
 
 ul {
